--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,10 +11,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 ​<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+
+
+
+
+
+
 </head>
 
 
@@ -40,7 +43,7 @@
 
 
           <li class="nav-item">
-            <input type="text" placeholder="Chercher" >
+            <input type="text" placeholder="Chercher">
             <span class="glyphicon glyphicon-search form-control-feedback"></span>
           </li>
 
@@ -68,6 +71,10 @@
   </nav>
 
   <!-- Page Content -->
+
+
+
+
 
 
 </body>
