--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -28,31 +28,9 @@
 
 <body>
 
-<div class="container">
+ <nav>
 
-  <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button class="navbar-toggle" type="button" data-target=".navbar-collapse" data-toggle="collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Elan CENTER Shop</a>
-      </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Accueil</a></li>
-          <li><a href="#about">Qui Somme Nous</a></li>
-          <li><a href="#contact">Nos Produits</a></li>
-          <li><a href="#contact Nous">Contact</a></li>
-          <li><a href="#Panier"><span class="fa fa-shopping-cart fa-4x">  Panier</span></a></li>
-        </ul>
-      </div><!-- /.nav-collapse -->
-    </div><!-- /.container -->
-  </div><!-- /.navbar -->
-
-</div>
+ </nav>
 
   <div class="container">
     <div class="row row-offcanvas row-offcanvas-left">
@@ -72,8 +50,39 @@
               <button class="btn btn-primary btn-xs" type="button" data-toggle="offcanvasright"><i class="glyphicon glyphicon-chevron-right"></i></button>
             </p>
             <div class="jumbotron">
-              <h1>Hello, world!</h1>
-              <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+
+              <ngb-carousel (slide)="slideActivate($event)">
+                <ng-template ngbSlide>
+                  <div class="picsum-img-wrapper">
+                    <img src="../../assets/images/Tunisian Perl/B 0-01.jpg" alt="Angular Carousel 1">
+                  </div>
+                  <div class="carousel-caption">
+                    <h3>BIENVENU</h3>
+                    <p>Bienvenu a Nos Entreprises d'entrainement ELAN et PES.</p>
+                  </div>
+                </ng-template>
+                <ng-template ngbSlide>
+                    <div class="picsum-img-wrapper">
+                      <img src="../../assets/images/Tunisian Perl/B 04-01.jpg" alt="Angular Carousel 2">
+                    </div>
+                    <div class="carousel-caption">
+                      <h3>ELAN by CONECT</h3>
+                      <p>entreprise de connect</p>
+                    </div>
+                  </ng-template>
+                <ng-template ngbSlide>
+                  <div class="picsum-img-wrapper">
+                    <img src="assets/images/img_bg_3.jpg" alt="Angular Carousel 2">
+                  </div>
+                  <div class="carousel-caption">
+                    <h3>Pes</h3>
+                    <p>entreprise de connect.</p>
+                  </div>
+                </ng-template>
+              </ngb-carousel>
+
+
+
             </div>
             <div class="row">
               <div class="col-6 col-sm-6 col-lg-4">
