--- a/src/app/contenu/contenu.component.css
+++ b/src/app/contenu/contenu.component.css
@@ -6,6 +6,12 @@ footer {
   padding-right: 15px;
 }
 
+.vl {
+
+  height: 500px;
+  margin-left: 200px;
+}
+
 /*
  * Off Canvas
  * --------------------------------------------------
