--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<app-header></app-header>
+<app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+<app-contenu></app-contenu>
+
+<app-footer></app-footer>
