--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -173,3 +173,17 @@ input[type=text]{
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+.topnav a:hover {
+  border-bottom: 3px solid red;
+}
+
+a{
+  font-size:large;
+  color: black;
+}
+
+.navbar-custum{
+background-color: #15d6a2 ;
+
+}
