--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,13 +44,12 @@
 
           <li class="nav-item">
             <input type="text" placeholder="Chercher">
-            <span class="glyphicon glyphicon-search form-control-feedback"></span>
           </li>
 
 
 
           <li class="nav-item active">
-            <img src="../../assets/images/logo/Logo facebook-01.jpg">
+            <a href="https://facebook/elan.com" class="fa fa-facebook"></a>
 
           </li>
 
@@ -65,6 +64,7 @@
           <li class="nav-item active">
             <a href="#" class="fa fa-linkedin" style="font-size: 30px"></a>
           </li>
+
 
         </ul>
       </div>
