--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -7,10 +7,14 @@
 
 
   <!-- header link -->
+<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="contenu.component.css">
 </head>
 
@@ -28,168 +32,82 @@
 
 <body>
 
- <nav>
 
- </nav>
+ <div class="container">
+  <div class="row">
+    <div class="col-5">
+      <ngb-carousel class="carro-custum">
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <img src="../../assets/images/Mme Rekik/PM516-01.jpg" alt="Random first slide">
+          </div>
+          <div class="carousel-caption">
+            <h3>First slide label</h3>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <img src="../../assets/images/Mme Rekik/PM130-01.jpg" alt="Random second slide">
+          </div>
+          <div class="carousel-caption">
+            <h3>Second slide label</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <img src="../../assets/images/Mme Rekik/PM 130-01.jpg" alt="Random third slide">
+          </div>
+          <div class="carousel-caption">
+            <h3>Third slide label</h3>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </ng-template>
+      </ngb-carousel>
 
-  <div class="container-fluid">
+    </div>
 
-              <div class="row">
+    <div class="col-2">
+      <hr class="v1">
+    </div>
 
-                <div class="col-5">
+    <div class="col-5">
+        <ngb-carousel class="carro-custum">
+          <ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+              <img src="../../assets/images/Tunisian Perl/B 0-01.jpg" alt="Random first slide">
+            </div>
+            <div class="carousel-caption">
+              <h3>First slide label</h3>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </ng-template>
+          <ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+              <img src="../../assets/images/Tunisian Perl/B 03-01.jpg" alt="Random second slide">
+            </div>
+            <div class="carousel-caption">
+              <h3>Second slide label</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </ng-template>
+          <ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+              <img src="../../assets/images/Tunisian Perl/Céramique 1-01.jpg" alt="Random third slide">
+            </div>
+            <div class="carousel-caption">
+              <h3>Third slide label</h3>
+              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
+          </ng-template>
+        </ngb-carousel>
 
-                  <ngb-carousel (slide)="slideActivate($event)">
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Tunisian Perl/B 0-01.jpg" alt="Angular Carousel 1">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>BIENVENU</h3>
-                        <p>Bienvenu a Nos Entreprises d'entrainement ELAN et PES.</p>
-                      </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                        <div class="picsum-img-wrapper">
-                          <img src="../../assets/images/Tunisian Perl/CM 1-01.jpg" alt="Angular Carousel 2">
-                        </div>
-                        <div class="carousel-caption">
-                          <h3>ELAN by CONECT</h3>
-                          <p>entreprise de connect</p>
-                        </div>
-                      </ng-template>
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Tunisian Perl/B 01-01.jpg" alt="Angular Carousel 2">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>Pes</h3>
-                        <p>entreprise de connect.</p>
-                      </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Tunisian Perl/Céramique 1-01.jpg" alt="Angular Carousel 2">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>Pes</h3>
-                        <p>entreprise de connect.</p>
-                      </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Tunisian Perl/CM 1-01.jpg" alt="Angular Carousel 2">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>Pes</h3>
-                        <p>entreprise de connect.</p>
-                      </div>
-                    </ng-template>
-                  </ngb-carousel>
-                </div>
+      </div>
+    </div>
 
-                <div class="col-2">
-                  <div class="vl"></div>
-                </div>
+</div>
 
-
-                <div class="col-5">
-                  <ngb-carousel (slide)="slideActivate($event)">
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Mme Rekik/PM 130-01.jpg" alt="Angular Carousel 1">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>BIENVENU</h3>
-                        <p>Bienvenu a Nos Entreprises d'entrainement ELAN et PES.</p>
-                      </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                        <div class="picsum-img-wrapper">
-                          <img src="../../assets/images/Mme Rekik/PM130-01.jpg" alt="Angular Carousel 2">
-                        </div>
-                        <div class="carousel-caption">
-                          <h3>ELAN by CONECT</h3>
-                          <p>entreprise de connect</p>
-                        </div>
-                      </ng-template>
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Mme Rekik/PM159-01.jpg" alt="Angular Carousel 2">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>Pes</h3>
-                        <p>entreprise de connect.</p>
-                      </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Mme Rekik/PM160-01.jpg" alt="Angular Carousel 2">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>Pes</h3>
-                        <p>entreprise de connect.</p>
-                      </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                      <div class="picsum-img-wrapper">
-                        <img src="../../assets/images/Mme Rekik/PM165-01.jpg" alt="Angular Carousel 2">
-                      </div>
-                      <div class="carousel-caption">
-                        <h3>Pes</h3>
-                        <p>entreprise de connect.</p>
-                      </div>
-                    </ng-template>
-
-
-                  </ngb-carousel>
-
-                </div>
-
-              </div>
-
-
-
-
-
-
-
-            <div class="row">
-              <div class="col-6 col-sm-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Bootstrap is a front-end framework that uses CSS and JavaScript to facilitate responsive Web design. Bootply is a playground for Bootstrap that enables developers and designers to test, prototype and create mockups using Bootstrap friendly HTML, CSS and Javascript.</p>
-                <p><a class="btn btn-default" href="#">View details »</a></p>
-              </div><!--/span-->
-              <div class="col-sm-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Bootply is a playground for Bootstrap that enables developers and designers to test, prototype and create mockups using Bootstrap friendly HTML, CSS and Javascript. Bootstrap is a front-end framework that uses CSS and JavaScript to facilitate responsive Web design. </p>
-                <p><a class="btn btn-default" href="#">View details »</a></p>
-              </div><!--/span-->
-              <div class="col-sm-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Bootstrap is a front-end framework that uses CSS and JavaScript to facilitate responsive Web design. Bootply is a playground for Bootstrap that enables developers and designers to test, prototype and create mockups using Bootstrap friendly HTML, CSS and Javascript.</p>
-                <p><a class="btn btn-default" href="#">View details »</a></p>
-              </div><!--/span-->
-              <div class="col-sm-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-default" href="#">View details »</a></p>
-              </div><!--/span-->
-              <div class="col-sm-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Bootstrap is a front-end framework that uses CSS and JavaScript to facilitate responsive Web design. Bootply is a playground for Bootstrap that enables developers and designers to test, prototype and create mockups using Bootstrap friendly HTML, CSS and Javascript.</p>
-                <p><a class="btn btn-default" href="#">View details »</a></p>
-              </div><!--/span-->
-              <div class="col-sm-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Bootstrap is a front-end framework that uses CSS and JavaScript to facilitate responsive Web design. Bootply is a playground for Bootstrap that enables developers and designers to test, prototype and create mockups using Bootstrap friendly HTML, CSS and Javascript.</p>
-                <p><a class="btn btn-default" href="#">View details »</a></p>
-              </div><!--/span-->
-
-
-            </div><!--/row-->
-
-
-          </div><!--/span-->
 
 
 </body>
