--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,9 +15,6 @@
 
 
 
-
-
-
 </head>
 
 
@@ -25,7 +22,7 @@
 <body>
 
   <div class="container-fluid">
-    <div class="row"><h3> <p>  <span class="fa fa-phone"></span>Phone : (+216) 71.000 000 </p></h3></div>
+    <div class="row"><h3> <p>  <span class="fa fa-phone"></span>   (+216) 71.000 000 </p> </h3></div>
 
   </div>
 
