--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,13 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 
 
+<script>
+  $("#menu-toggle").click(function(e) {
+    e.preventDefault();
+    $("#wrapper").toggleClass("active");
+});
+</script>
+
 
 </head>
 
@@ -159,9 +166,32 @@
         </div>
     </div>
 </div>
-
-
 </nav>
+
+
+<!-- side barre -->
+<div class="row">
+  <div id="wrapper" class="active">
+
+    <!-- Sidebar -->
+          <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+    <ul id="sidebar_menu" class="sidebar-nav">
+         <li class="sidebar-brand"><a id="menu-toggle" href="#">Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+    </ul>
+      <ul class="sidebar-nav" id="sidebar">
+        <li><a>Link1<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+        <li><a>link2<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      </ul>
+    </div>
+
+    <!-- fin sidebare  -->
+
+
+  </div>
+
+</div>
+
 
 
 
