--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -113,9 +113,9 @@ body {margin:0;font-family:Arial}
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Accuiel</a>
+  <a routerLink="/contenu" class="active">Accuiel</a>
   <a href="#news">Qui sommes Nous</a>
-  <a href="#contact">Contact Nous </a>
+  <a routerLink="/contactez">Contact Nous </a>
   <div class="dropdown">
     <button class="dropbtn">Nos Produits
       <i class="fa fa-caret-down"></i>
