--- a/src/app/sidebare/sidebare.component.html
+++ b/src/app/sidebare/sidebare.component.html
@@ -11,8 +11,8 @@
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-container">
-    <a href="#">Artisanaux</a>
-    <a href="#">Patissisers</a>
+    <a routerLink="/artslist">Artisanaux</a>
+    <a routerLink="/patlist">Patissisers</a>
   </div>
 
   <a href="#about">Fabricant</a>
