--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
 ​<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-
+<script src="https://mdbootstrap.com/docs/jquery/components/buttons-social/"></script>
 
 
 <script>
@@ -30,7 +30,8 @@
 <body>
 
   <div class="container-fluid">
-    <div class="row"><h3> <p>  <span class="fa fa-phone"></span>   (+216) 71.000 000 </p> </h3></div>
+    <div class="row">
+      <h3>   <span class="fa fa-phone"></span>   <p> (+216) 71.000 000 </p> </h3></div>
 
   </div>
 
@@ -38,7 +39,7 @@
   <nav class="navbar navbar-expand-lg navbar-lightsteelblue bg-lightsteelblue">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img class="card-img-top img-responsive" src="../../assets/images/Logo1.jpg" alt="">
+        <img class="card-img-top img-responsive" src="../../assets/images/logo-Elan.png" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,19 +55,25 @@
 
 
           <li class="nav-item actived">
-            <a href="https://facebook/elan.com" class="fa fa-facebook"></a>
+
+            <!--Facebook-->
+            <a class="btn-floating btn-lg btn-fb" type="button" role="button">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+
+
           </li>
 
           <li class="nav-item actived">
-            <a href="#" class="fa fa-twitter" style="font-size: 30px"></a>
+            <a href="#" class="fa fa-twitter" ></a>
           </li>
 
           <li class="nav-item actived">
-            <a href="#" class="fa fa-youtube" style="font-size: 30px"></a>
+            <a href="#" class="fa fa-youtube"></a>
           </li>
 
           <li class="nav-item actived">
-            <a href="#" class="fa fa-linkedin" style="font-size: 30px"></a>
+            <a href="#" class="fa fa-linkedin"></a>
           </li>
 
 
