--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -83,15 +83,15 @@
   </nav>
 
   <!-- Page navbar  -->
-
-
 <app-navbar></app-navbar>
+  <!-- side barre -->
+  <div class="row fixed-left">
+    <app-sidebare></app-sidebare>
+  </div>
 
+  <!-- contenu-->
 
-<!-- side barre -->
-
-<app-sidebare></app-sidebare>
-
+  <!-- slick-->
 
 
 
