--- a/src/app/sidebare/sidebare.component.html
+++ b/src/app/sidebare/sidebare.component.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="sidenav">
+<div class="sidenav fixed-sidebar fixed-left">
   <button class="dropdown-btn">Produits
     <i class="fa fa-caret-down"></i>
   </button>
@@ -22,6 +22,7 @@
 
   <a href="#contact">Search</a>
 </div>
+
 
 
 
