--- a/src/app/sidebare/sidebare.component.css
+++ b/src/app/sidebare/sidebare.component.css
@@ -6,13 +6,13 @@ body {
 .sidenav {
   height: 100%;
   width: 200px;
-  position: fixed;
-  z-index: 1;
+  position:fixed;
   top: 336;
   left: 0;
-  background-color: #111;
+  background-color :#111;
   overflow-x: hidden;
   padding-top: 20px;
+
 }
 
 /* Style the sidenav links and the dropdown button */
@@ -20,7 +20,7 @@ body {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 20px;
-  color: #818181;
+  color:#f1f1f1;
   display: block;
   border: none;
   background: none;
