--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -83,7 +83,7 @@
   </nav>
 
   <!-- Page navbar  -->
-<app-navbar></app-navbar>
+<app-navigation></app-navigation>
   <!-- side barre -->
   <div class="row fixed-left">
     <app-sidebare></app-sidebare>
