--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -113,16 +113,16 @@ body {margin:0;font-family:Arial}
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a routerLink="/contenu" class="active">Accuiel</a>
-  <a href="#news">Qui sommes Nous</a>
-  <a routerLink="/contactez">Contact Nous </a>
+  <a routerLink="/contenu" class="active">Accueil</a>
+  <a routerLink="#">Qui sommes Nous</a>
+  <a routerLink="/contactez" class="active">Contactez Nous </a>
   <div class="dropdown">
     <button class="dropbtn">Nos Produits
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Artisanaux</a>
-      <a href="#">Patissiers</a>
+      <a routerLink="/artslist">Artisanaux</a>
+      <a routerLink="/patlist">Patissiers</a>
     </div>
   </div>
   <a href="#about">Panier</a>
