--- a/src/app/sidebare/sidebare.component.html
+++ b/src/app/sidebare/sidebare.component.html
@@ -18,7 +18,7 @@
   <a href="#about">Fabricant</a>
   <a href="#services">Condition de vente</a>
   <a href="#clients">Livraison</a>
-  <a href="#contact">Contact</a>
+  <a routerLink="/contactez">Contact</a>
 
   <a href="#contact">Search</a>
 </div>
