--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -33,11 +33,9 @@
 <body>
 
 
+
+<!-- contenu a droit-->
  <div class="container">
-
-
-
-
   <div class="row">
     <div class="col-5">
       <ngb-carousel class="carro-custum">
