--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -55,25 +55,19 @@
 
 
           <li class="nav-item actived">
-
-            <!--Facebook-->
-            <a class="btn-floating btn-lg btn-fb" type="button" role="button">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-
-
+              <a class="fab fa-facebook-square" aria-hidden="true" style="font-size:60px"></a>
           </li>
 
           <li class="nav-item actived">
-            <a href="#" class="fa fa-twitter" ></a>
+            <a href="#" class="fab fa-twitter-square" aria-hidden="true" style="font-size:60px" ></a>
           </li>
 
           <li class="nav-item actived">
-            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fab fa-youtube-square" aria-hidden="true" style="font-size:60px"></a>
           </li>
 
           <li class="nav-item actived">
-            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fab fa-linkedin-square" aria-hidden="true" style="font-size:60px"></a>
           </li>
 
 
@@ -85,9 +79,7 @@
   <!-- Page navbar  -->
 <app-navigation></app-navigation>
   <!-- side barre -->
-  <div class="row fixed-left">
-    <app-sidebare></app-sidebare>
-  </div>
+<app-sidebare></app-sidebare>
 
   <!-- contenu-->
 
