--- a/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
+++ b/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
@@ -16,10 +16,16 @@
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM337-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Item One</a>
+            <a href="#">Yasmina</a>
           </h4>
-          <h5>$24.99</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+          <h5>$75</h5>
+          <p class="card-text"> <strong style="color:darkseagreen; font-size: 20px; " >Les Ingédiants </strong>Pistach, Amande, Sucre, Sirop de glucose</p>
+          <div style="width: 100px;  padding-top:10px; padding-bottom:10px;border: 3px solid teal; text-align: center;background: #C0C0C0;">
+            <strong>
+              Réf : PM337
+              Poids : 70 pièces/Kg
+            </strong>
+
         </div>
         <div class="card-footer">
           <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -32,10 +38,18 @@
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM130-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Item Two</a>
+            <a href="#">Bjewia Fakia</a>
           </h4>
-          <h5>$24.99</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+          <h5>$59</h5>
+          <p class="card-text"><strong style="color:darkseagreen; font-size: 20px; " >Les Ingédiants </strong>Amande, Noisette, Sirop de sucre, Sirop de glucose</p>
+          <div style="width: 120px;  padding-top:10px; padding-bottom:10px;border: 3px solid teal; text-align: center;background: #C0C0C0;">
+            <strong>
+              Réf : PT131
+              Poids : 60 pièces/Kg
+            </strong>
+
+
+          </div>
         </div>
         <div class="card-footer">
           <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -48,10 +62,17 @@
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM165-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Item Three</a>
+            <a href="#">Samsa Amande Noisette</a>
           </h4>
-          <h5>$24.99</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+          <h5>$58</h5>
+          <p class="card-text"><strong style="color:darkseagreen; font-size: 20px; " >Les Ingédiants </strong>Amande, Noisette, Sucre glace, Beurre, Feulle de brick, Sirop de sucre</p>
+          <div style="width: 120px;  padding-top:10px; padding-bottom:10px;border: 3px solid teal; text-align: center;background: #C0C0C0;">
+            <strong>
+              Réf : PT131
+              Poid : 70 pièces/Kg
+            </strong>
+
+          </div>
         </div>
         <div class="card-footer">
           <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
