--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 body{
-  background-color: #21d192;
-  /*background-image: url(../../assets/images/Fond-01.jpg);*/
+  background-color: white;
+  /*background-image: url(../../assets/images/Fond-01.jpg);
+    color : #21d192; */
   font-family: "Lato", sans-serif;
 }
 
@@ -98,6 +99,9 @@ input[type=text]{
       border: none;
     }
 
+
+    /* ICON Social media*/
+
     .fa {
       padding: 20px;
       font-size: 30px;
@@ -105,16 +109,18 @@ input[type=text]{
       text-align: center;
       text-decoration: none;
       margin: 5px 2px;
-
+      border-radius: 50%;
     }
 
-
+    .fa:hover {
+        opacity: 0.7;
+    }
 
     .fa-facebook {
       background: #3B5998;
       color: white;
-
     }
+
 
     .fa-twitter {
       background: #55ACEE;
@@ -142,51 +148,51 @@ input[type=text]{
       color: white;
     }
 
-
     ​
-.sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
+    .sidenav {
+      height: 100%;
+      width: 160px;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      padding-top: 20px;
+    }
 
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-}
+    .sidenav a {
+      padding: 6px 8px 6px 16px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+    }
 
-.sidenav a:hover {
-  color: #f1f1f1;
-}
+    .sidenav a:hover {
+      color: #f1f1f1;
+    }
 
-.main {
-  margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
+    .main {
+      margin-left: 160px; /* Same as the width of the sidenav */
+      font-size: 28px; /* Increased text to enable scrolling */
+      padding: 0px 10px;
+    }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
+    @media screen and (max-height: 450px) {
+      .sidenav {padding-top: 15px;}
+      .sidenav a {font-size: 18px;}
+    }
 
-.topnav a:hover {
-  border-bottom: 3px solid red;
-}
+    .topnav a:hover {
+      border-bottom: 3px solid red;
+    }
 
-a{
-  font-size:large;
-  color: black;
-}
+    a{
+      font-size:large;
+      color: black;
+    }
+
 
 .navbar-custum{
 background-color: #15d6a2 ;
