--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,9 +53,6 @@
             <input type="text" placeholder="Chercher">
           </li>
 
-          <li class="nav-item actived">
-          <a href="#" class="fab fa-facebook"></a>
-          </li>
 
           <li class="nav-item actived">
             <a class="fab fa-facebook-square" aria-hidden="true" style="font-size:60px"></a>
@@ -83,6 +80,16 @@
   <!-- Page navbar  -->
 <app-navigation></app-navigation>
   <!-- side barre -->
+
+
+  <!-- hr -->
+  <div class="row">
+    <div class="col col-md-4"> </div>
+    <div class="col col-md-6">
+      <hr style="border: 5px;border-color: darkkhaki;">
+    </div>
+
+  </div>
 <app-sidebare></app-sidebare>
 
   <!-- contenu-->
