--- a/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
+++ b/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-
+    </div>
     <div class="col-lg-4 col-md-6 mb-4">
       <div class="card h-100">
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM165-01.jpg" alt=""></a>
