--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
+    <!------ Include the above in your HEAD tag ------->
 
 
 
@@ -84,7 +84,10 @@
                     <!-- Content -->
                     <h6 class="text-uppercase font-weight-bold">Company name</h6>
                     <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>
+                      L'entreprise d'entrainement (EE) professionnelle ELAN, dont le promoteur est la Confédération des Entreprises Citoyennes de Tunisie (CONECT), est une entreprise de formation par la pratique ,active au sein d'un réseau international regroupant plus de 5000 entreprises de même type.
+                       Nous offrons aux personnes en formation la possibilité de mettre en pratique leurs connaissances et compétences professionnelles, de les actualiser ou de les parfaire dans tous les domaines de l'administration et de la gestion commerciale.
+                      Elle est certifiée par le Réseau des Entreprises d'Entrainement de Tunisie REET.</p>
 
                 </div>
                 <!-- Grid column -->
@@ -96,18 +99,17 @@
                     <h6 class="text-uppercase font-weight-bold">Products</h6>
                     <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a class="dark-grey-text" href="#!">MDBootstrap</a>
+                        <a class="dark-grey-text" href="#!">Madame Rekik</a>
                     </p>
+                    <div class="product_logo">
+                    <img src="../../assets/images/Mme Rekik/rekik.JPG" alt="Madame Rekik" >
+                    </div>
                     <p>
-                        <a class="dark-grey-text" href="#!">MDWordPress</a>
+                        <a class="dark-grey-text" href="#!">Tunnisian Perl</a>
                     </p>
-                    <p>
-                        <a class="dark-grey-text" href="#!">BrandFlow</a>
-                    </p>
-                    <p>
-                        <a class="dark-grey-text" href="#!">Bootstrap Angular</a>
-                    </p>
-
+                    <div class="product_logo">
+                      <img src="../../assets/images/Tunisian Perl/perl.JPG" alt="Tunisian Perl">
+                    </div>
                 </div>
                 <!-- Grid column -->
 
@@ -115,22 +117,49 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
                     <!-- Links -->
-                    <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+                    <h6 class="text-uppercase font-weight-bold">Partenaires</h6>
                     <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a class="dark-grey-text" href="#!">Your Account</a>
+                        <a class="dark-grey-text" href="http://www.ee-reseau-tunisie.tn/">
+                          <div class="partenaires_logo">
+                            <img src="../../assets/images/partenaire/logo-réseau-EE.png" alt="Reet">
+                            <figcaption> Reet </figcaption>
+                          </div>
+                        </a>
                     </p>
                     <p>
-                        <a class="dark-grey-text" href="https://www.helvartis.ch/fr/!">Helvatris</a>
+                        <a class="dark-grey-text" href="https://www.helvartis.ch/fr/!">
+                          <div class="partenaires_logo">
+                            <img src="../../assets/images/partenaire/helvartis.png" alt="helvartis">
+                            <figcaption>Helvartis</figcaption>
+                          </div>
+                        </a>
                     </p>
                     <p>
-                        <a class="dark-grey-text" href="https://www.swisscontact.org/fr/page-daccueil.html">Suisscontact</a>
+                        <a class="dark-grey-text" href="https://www.swisscontact.org/fr/page-daccueil.html">
+                          <div class="partenaires_logo">
+                            <img src="../../assets/images/partenaire/suisse.png" alt="suisscontact">
+                            <figcaption> SuissContact </figcaption>
+                          </div>
+                        </a>
                     </p>
                     <p>
-                      <a class="dark-grey-text" href="#!">Conect</a>
+                      <a class="dark-grey-text" href="#!">
+                        <div class="partenaires_logo">
+
+                          <img src="../../assets/images/partenaire/conect.gif" alt="conect">
+                          <figcaption> Conect </figcaption>
+                        </div>
+
+                      </a>
                   </p>
                     <p>
-                        <a class="dark-grey-text" href="#!">Help</a>
+                        <a class="dark-grey-text" href="http://www.emploi.gov.tn/index.php/ar">
+                          <div class="partenaires_logo">
+                            <img src="../../assets/images/partenaire/atfp.png" alt="ATFP">
+                            <figcaption>Ministère de la Formation professionnelle et de l'Emploi </figcaption>
+                          </div>
+                        </a>
                     </p>
 
                 </div>
