--- a/src/app/quisommesnous/quisommesnous.component.html
+++ b/src/app/quisommesnous/quisommesnous.component.html
@@ -1,1 +1,64 @@
-<p>quisommesnous works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QUI SOMME NOUS </title>
+</head>
+<body>
+
+   <div class="row">
+    <div class="col col-md-2"></div>
+    <div class="col col-md-8">
+      <article class="all-browser">
+        <p>
+          <strong>L'entreprise d'entrainement (EE)</strong> professionnelle ELAN,
+              dont le promoteur est la Confédération des Entreprises Citoyennes de Tunisie
+              <strong>(CONECT)</strong>,
+              est une entreprise de formation par la pratique ,
+              active au sein d'un réseau international regroupant plus de 5000 entreprises de même type.
+              Nous offrons aux personnes en formation la possibilité de mettre en pratique
+              leurs connaissances et compétences professionnelles, de les actualiser ou de
+              les parfaire dans tous les domaines de l'administration et de la gestion commerciale.
+              Elle est certifiée par le Réseau des Entreprises d'Entrainement de Tunisie REET.
+        </p>
+      </article>
+
+
+    </div>
+    <div class="col col-md-2"></div>
+  </div>
+
+                    <!--Integration PHOTO -->
+                    <div class="row block_vtr">
+                      <div class="col col-md-4 vtr_left">
+                        <img src="../../assets/images/kick off/20200804_091936.jpg">
+                      </div>
+
+                     <div class="col col-md-4">
+                      <img src="../../assets/images/kick off/20200804_091924.jpg">
+                     </div>
+
+                     <div class="col col-md-4 vtr_right">
+                      <img src="../../assets/images/kick off/20200804_091930.jpg">
+                     </div>
+                     </div>
+                    <!--Integration vedio -->
+   <div class="row block_vtr">
+    <div class="col col-md-4 vtr_left">
+      <iframe src="https://www.youtube.com/embed/Ru2UBKv2hMw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+   <div class="col col-md-4">
+      <iframe src="https://www.youtube.com/embed/9bMmIC9f3GI" frameborder="2" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+
+   <div class="col col-md-4 vtr_right">
+    <iframe src="https://www.youtube.com/embed/KHUTSwe5Xrg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   </div>
+
+
+
+</body>
+</html>
