--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -37,7 +37,7 @@
 
               <li class="nav-item dropdown btn-group" dropdown>
                 <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                Basic dropdown<span class="caret"></span></a>
+               Nos produits <span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Action</a>
                     <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Another action</a>
@@ -48,12 +48,6 @@
             </li>
 
 
-
-
-
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
         </ul>
 
         <form class="form-inline my-2 my-lg-0">
